fix: positions and size on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -11,5 +11,5 @@ body {
 
 #root {
   height: 100vh;
-  padding: 34px;
+  padding: 2%;
 }
